--- a/AbhinavAwasthi.ipynb
+++ b/AbhinavAwasthi.ipynb
@@ -44,133 +44,24 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['id',\n",
-       " 'member_id',\n",
-       " 'loan_amnt',\n",
-       " 'funded_amnt',\n",
-       " 'funded_amnt_inv',\n",
-       " 'term',\n",
-       " 'int_rate',\n",
-       " 'installment',\n",
-       " 'grade',\n",
-       " 'sub_grade',\n",
-       " 'emp_title',\n",
-       " 'emp_length',\n",
-       " 'home_ownership',\n",
-       " 'annual_inc',\n",
-       " 'verification_status',\n",
-       " 'issue_d',\n",
-       " 'loan_status',\n",
-       " 'pymnt_plan',\n",
-       " 'url',\n",
-       " 'desc',\n",
-       " 'purpose',\n",
-       " 'title',\n",
-       " 'zip_code',\n",
-       " 'addr_state',\n",
-       " 'dti',\n",
-       " 'delinq_2yrs',\n",
-       " 'earliest_cr_line',\n",
-       " 'inq_last_6mths',\n",
-       " 'mths_since_last_delinq',\n",
-       " 'mths_since_last_record',\n",
-       " 'open_acc',\n",
-       " 'pub_rec',\n",
-       " 'revol_bal',\n",
-       " 'revol_util',\n",
-       " 'total_acc',\n",
-       " 'initial_list_status',\n",
-       " 'out_prncp',\n",
-       " 'out_prncp_inv',\n",
-       " 'total_pymnt',\n",
-       " 'total_pymnt_inv',\n",
-       " 'total_rec_prncp',\n",
-       " 'total_rec_int',\n",
-       " 'total_rec_late_fee',\n",
-       " 'recoveries',\n",
-       " 'collection_recovery_fee',\n",
-       " 'last_pymnt_d',\n",
-       " 'last_pymnt_amnt',\n",
-       " 'next_pymnt_d',\n",
-       " 'last_credit_pull_d',\n",
-       " 'collections_12_mths_ex_med',\n",
-       " 'mths_since_last_major_derog',\n",
-       " 'policy_code',\n",
-       " 'application_type',\n",
-       " 'annual_inc_joint',\n",
-       " 'dti_joint',\n",
-       " 'verification_status_joint',\n",
-       " 'acc_now_delinq',\n",
-       " 'tot_coll_amt',\n",
-       " 'tot_cur_bal',\n",
-       " 'open_acc_6m',\n",
-       " 'open_il_6m',\n",
-       " 'open_il_12m',\n",
-       " 'open_il_24m',\n",
-       " 'mths_since_rcnt_il',\n",
-       " 'total_bal_il',\n",
-       " 'il_util',\n",
-       " 'open_rv_12m',\n",
-       " 'open_rv_24m',\n",
-       " 'max_bal_bc',\n",
-       " 'all_util',\n",
-       " 'total_rev_hi_lim',\n",
-       " 'inq_fi',\n",
-       " 'total_cu_tl',\n",
-       " 'inq_last_12m',\n",
-       " 'acc_open_past_24mths',\n",
-       " 'avg_cur_bal',\n",
-       " 'bc_open_to_buy',\n",
-       " 'bc_util',\n",
-       " 'chargeoff_within_12_mths',\n",
-       " 'delinq_amnt',\n",
-       " 'mo_sin_old_il_acct',\n",
-       " 'mo_sin_old_rev_tl_op',\n",
-       " 'mo_sin_rcnt_rev_tl_op',\n",
-       " 'mo_sin_rcnt_tl',\n",
-       " 'mort_acc',\n",
-       " 'mths_since_recent_bc',\n",
-       " 'mths_since_recent_bc_dlq',\n",
-       " 'mths_since_recent_inq',\n",
-       " 'mths_since_recent_revol_delinq',\n",
-       " 'num_accts_ever_120_pd',\n",
-       " 'num_actv_bc_tl',\n",
-       " 'num_actv_rev_tl',\n",
-       " 'num_bc_sats',\n",
-       " 'num_bc_tl',\n",
-       " 'num_il_tl',\n",
-       " 'num_op_rev_tl',\n",
-       " 'num_rev_accts',\n",
-       " 'num_rev_tl_bal_gt_0',\n",
-       " 'num_sats',\n",
-       " 'num_tl_120dpd_2m',\n",
-       " 'num_tl_30dpd',\n",
-       " 'num_tl_90g_dpd_24m',\n",
-       " 'num_tl_op_past_12m',\n",
-       " 'pct_tl_nvr_dlq',\n",
-       " 'percent_bc_gt_75',\n",
-       " 'pub_rec_bankruptcies',\n",
-       " 'tax_liens',\n",
-       " 'tot_hi_cred_lim',\n",
-       " 'total_bal_ex_mort',\n",
-       " 'total_bc_limit',\n",
-       " 'total_il_high_credit_limit']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Index' object has no attribute 'describe'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\ABHINA~1\\AppData\\Local\\Temp/ipykernel_24616/3433091894.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mloan_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Index' object has no attribute 'describe'"
+     ]
     }
    ],
    "source": [
-    "loan_data.columns.tolist()"
+    "loan_data.columns.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2356,72 +2247,6 @@
     "<u>Summary:</u><br>    \n",
     "    1. The states w.r.t the total loan amount where verification was not done are- California, Florida, New York and New Jersey <br>\n",
     "    2. Wyoming state has highest average loan amount that is default. Although this state had only 3 applicants but the avg loan amount and salary range were highest\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[187875,\n",
-       " 663375,\n",
-       " 226350,\n",
-       " 1289000,\n",
-       " 11713150,\n",
-       " 1006175,\n",
-       " 872700,\n",
-       " 204500,\n",
-       " 134750,\n",
-       " 5135450,\n",
-       " 2338750,\n",
-       " 242650,\n",
-       " 3000,\n",
-       " 2284325,\n",
-       " 292750,\n",
-       " 548150,\n",
-       " 448850,\n",
-       " 1574800,\n",
-       " 1738075,\n",
-       " 1113400,\n",
-       " 846500,\n",
-       " 1077375,\n",
-       " 3000,\n",
-       " 124875,\n",
-       " 1259800,\n",
-       " 19400,\n",
-       " 315875,\n",
-       " 3275975,\n",
-       " 309625,\n",
-       " 1094775,\n",
-       " 5339100,\n",
-       " 1682650,\n",
-       " 459500,\n",
-       " 733875,\n",
-       " 1930050,\n",
-       " 286050,\n",
-       " 667675,\n",
-       " 115300,\n",
-       " 27500,\n",
-       " 3219150,\n",
-       " 496425,\n",
-       " 2108775,\n",
-       " 66700,\n",
-       " 1466475,\n",
-       " 657475,\n",
-       " 259375,\n",
-       " 59000]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "coll_total_loan['loan_amnt'].values.tolist()"
    ]
   },
   {
